# handbook-generator

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
backend/: exporter.py  handbook_generator.py  llm_client.py  pdf_processor.py  rag_engine.py  supabase_client.py
frontend/: app.py  streamlit_app.py
